# 20191-team-8

./: Class Diagram.asta  README.md
BANG!/: BANG!.cpp  BANG!.sln  CMakeLists.txt
BANG!/BANG!/: BANG!.cpp  BANG!.vcxproj  BANG!.vcxproj.filters  arma.cpp  arma.h  arma_carabine.cpp  arma_carabine.h  arma_schofield.h  arma_winchester.cpp  arma_winchester.h  bandido.cpp  bandido.h  bang.cpp  bang.h  bar.h  carroagem.cpp  carroagem.h  carroca.cpp  carroca.h  cartas.cpp  cartas.h  cerveja.cpp  cerveja.h  dealer.cpp  dealer.h  deck.cpp  deck.h  delegado.cpp  delegado.h  dinamite.cpp  dinamite.h  duelo.cpp  duelo.h  esquiva.cpp  esquiva.h  jogador.h  metralhadora.h  mira.cpp  mustang.cpp  mustang.h  (+10 more)
BANG!/BANG!/Debug/: vc142.idb
BANG!/Debug/: BANG!.ilk
BANG!/include/: arma.h  arma_schofield.h  armar.h  bandido.h  bang.h  bar.h  bart_cassidy.h  bart_cassidy0.h  black_jack.h  carroagem.h  carroca.h  cartas.h  cerveja.h  dealer.h  deck.h  delegado.h  dinamite.h  duelo.h  el_gringo.h  esquiva.h  jogador.h  metralhadora.h  mira.h  mustang.h  papel.h  paul_regret.h  personagem.h  prisao.h  renegado.h  rose_doolan.h  saloon.h  suzy_lafayette.h  willy_kid.h  xerife.h
BANG!/libs/allegro5/: CMakeCache.txt  Makefile  (+2 more)
BANG!/src/: BANG!.cpp  arma.cpp  arma_schofield.cpp  bandido.cpp  bang.cpp  bart_cassidy.cpp  black_jack.cpp  dealer.cpp  deck.cpp  delegado.cpp  dinamite.cpp  el_gringo.cpp  jogador.cpp  metralhadora.cpp  mira.cpp  mustang.cpp  papel.cpp  paul_regret.cpp  pedro_ramirez.cpp  personagem.cpp  renegado.cpp  rose_doolan.cpp  suzy_lafayette.cpp  willy_kid.cpp  xerife.cpp
(+213 files in other folders)
